--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
 <body>
     <section class="container">
         <div class="columns">
-            <div class="column is-10 is-offset-1">
-                <h1 class="title">MulT Vers</h1>
-                <h2 class="subtitle">One view to see them all !</h2>
+            <div class="column is-12">
+                <h1 class="title"> MulT Vers </h1>
                 <hr>
                 <!-- Add a placeholder for the Twitch embed -->
                 <div id="twitch-embed"></div>
@@ -100,8 +99,8 @@
                 <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
                 <script type="text/javascript">
                     currentChannel = new Twitch.Embed("twitch-embed", {
-                        width: 1100,
-                        height: 600,
+                        width: '100%',
+                        height: 700,
                         channel: channels[index],
                         // Only needed if this page is going to be embedded on other websites
                         parent: ["localhost", "hilarious-naiad-d54a76.netlify.app"]
@@ -109,66 +108,60 @@
                 </script>
 
                 <hr>
-                <div class="container column is-4 is-offset-8">
-                    <button class="button is-info is-light" onClick="progDown()"><</button>
-                    <button class="button is-info is-light" onClick="progUp()">></button>
-                    <button class="button">+</button>
-                    <button class="button">-</button>
-                    <button class="button is-dark is-light"><a target="_blank" href="https://www.netflix.com/browse">Netflix</a></button>
-                    <button class="button is-warning"><a target="_blank" href="https://app.plex.tv/desktop/#!/">Plex</a></button>
-                </div>
+                <!-- Main container -->
+                <nav class="level">
+                    <!-- Left side -->
+                    <div class="level-left">
+                        <div class="level-item">
+                            <button class="button is-link">
+                                <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=http://localhost:3000&scope=user:read:follows&response_type=token">Twitch</a>
+                            </button>
+                        </div>
+                        <div class="level-item">
+                            <p id="channels-view"></p>
+                        </div>
+                        <div class="level-item">
+                            <div class="field has-addons">
+                                <div class="control">
+                                    <input id="search-streamer" class="input is-rounded" type="text" placeholder="">
+                                </div>
+                                <div class="control">
+                                    <button class="button is-link is-light is-rounded" onClick="addStreamerTochannels()">Search</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Right side -->
+                    <div class="level-right">
+                        <p class="level-item"><button class="button is-info is-light" onClick="progDown()"><</button></p>
+                        <p class="level-item"><button class="button is-info is-light" onClick="progUp()">></button></p>
+                        <p class="level-item"><button class="button is-dark is-light"><a style="color:red;" target="_blank" href="https://www.netflix.com/browse">Netflix</a></button></p>
+                        <p class="level-item"><button class="button is-dark"><a style="color: yellow;" target="_blank" href="https://app.plex.tv/desktop/#!/">Plex</a></button></p>
+                    </div>
+                </nav>
 
                 <hr>
-                <div class="container columns">
-                    <div class="column is-1">
-                        <button class="button is-link">
-                            <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=https://hilarious-naiad-d54a76.netlify.app&scope=user:read:follows&response_type=token">Twitch</a>
-                        </button>
-                    </div>
+                <div class="container level">
+                    <div class="level-right">
+                        <div class="level-item">
+                            <button class="button is-danger">Youtube</button>
+                        </div>
 
-                    <div class="container column is-6">
-                        <p id="channels-view"></p>
-                    </div>
-
-
-                    <div class="container column is-4">
-                        <div class="field has-addons">
-                            <div class="control">
-                                <input id="search-streamer" class="input is-rounded" type="text" placeholder="ajouter un streamer">
-                            </div>
-                            <div class="control">
-                                <button class="button is-link is-light is-rounded" onClick="addStreamerTochannels()">Ajouter</button>
+                        <div class="level-item">
+                            <div class="field has-addons">
+                                <div class="control">
+                                    <input id="search-streamer" class="input is-rounded" type="text">
+                                </div>
+                                <div class="control">
+                                    <button class="button is-danger is-light is-rounded" onClick="">Search</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <hr>
-                <div class="container columns">
-                    <div class="column is-1">
-                        <button class="button is-danger">Youtube</button>
-                    </div>
-
-                    <div class="container column is-6">
-                        <p id="yt-view"></p>
-                    </div>
-
-
-                    <div class="container column is-4">
-                        <div class="field has-addons">
-                            <div class="control">
-                                <input id="search-youtube" class="input is-rounded" type="text" placeholder="ajouter une vidéo">
-                            </div>
-                            <div class="control">
-                                <button class="button is-danger is-light is-rounded" onClick="">
-                                        Ajouter
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
-        </div>
         </div>
     </section>
 
