--- a/index.html
+++ b/index.html
@@ -6,116 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <!-- Load the Twitch embed JavaScript file -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
 </head>
 
-<script type="text/javascript">
-    let url = window.location.href;
-    var client_id = '3tb8b7vw9i5wg4u89fb4q54n2ewgla';
-    var currentAccessToken = undefined;
-
-    var channels = ['yannick_sf'];
-    var index = 0;
-    var currentChannel = undefined;
-
-
-    if (url.includes('access_token')) {
-        let params = url.split('#');
-        let strAcctoken = params[1].split('&');
-        currentAccessToken = strAcctoken[0].split('=')[1];
-        console.log(currentAccessToken);
-        apiGetUserInfos();
-    }
-
-    function progUp() {
-        if (index == channels.length - 1) {
-            index = 0;
-        } else {
-            index++;
-        }
-        currentChannel.setChannel(channels[index]);
-
-    }
-
-    function progDown() {
-        if (index == 0) {
-            index = channels.length - 1;
-        } else {
-            index--;
-        }
-        currentChannel.setChannel(channels[index]);
-    }
-
-    function addStreamerTochannels() {
-        let value = document.getElementById('search-streamer');
-        let view = document.getElementById('channels-view');
-
-        channels.push(value.value);
-        view.innerHTML += '<span class="tag is-medium">' + value.value + '</span> '
-        value.value = ''
-    }
-
-    function apiGetUserInfos() {
-        if (currentAccessToken != undefined) {
-
-            axios.get("https://api.twitch.tv/helix/users", {
-                headers: {
-                    'Authorization': 'Bearer ' + currentAccessToken,
-                    'Client-Id': client_id
-                }
-            }).then((response) => {
-
-                let userInfos = response.data.data[0]
-                axios.get("https://api.twitch.tv/helix/streams/followed?user_id=" + userInfos.id, {
-                    headers: {
-                        'Authorization': 'Bearer ' + currentAccessToken,
-                        'Client-Id': client_id
-                    }
-                }).then((resp) => {
-
-                    let streamList = resp.data.data
-                    for (var e in streamList) {
-                        channels.push(streamList[e].user_login);
-                        document.getElementById('channels-view').innerHTML += '<span class="tag is-medium">' + streamList[e].user_login + '</span> ';
-                    }
-                })
-
-            });
-        }
-    }
-</script>
-
 <body>
-    <section class="container">
-        <div class="columns">
-            <div class="column is-12">
-                <h1 class="title"> MulT Vers </h1>
+    <div class="columns">
+        <div class="column is-12">
+
+            <!-- HEADER -->
+            <div class="container">
+                <nav class="navbar">
+                    <div class="navbar-brand">
+                        <p class="title">Mul[T•V]ers</p>
+                    </div>
+
+                    <div class="navbar-menu">
+                        <div class="navbar-end">
+                            <div class="navbar-item"><button class="button is-dark "><a style="color:red;" target="_blank" href="https://www.netflix.com/browse">Netflix</a></button></div>
+                            <div class="navbar-item"><button class="button is-black"><a style="color: yellow;" target="_blank" href="https://app.plex.tv/desktop/#!/">Plex</a></button></div>
+                            <div class="navbar-item"><button class="button is-info "><a style="color:white;" target="_blank" href="">Prime Vidéo</a></button></div>
+                            <div class="navbar-item"><button class="button is-light"><a style="color: blue;" target="_blank" href="">Disney +</a></button></div>
+                        </div>
+                    </div>
+                </nav>
                 <hr>
-                <!-- Add a placeholder for the Twitch embed -->
-                <div id="twitch-embed"></div>
+            </div>
 
-                <!-- Load the Twitch embed JavaScript file -->
-                <script src="https://embed.twitch.tv/embed/v1.js"></script>
+            <!-- Balise du player -->
+            <div id="place-player">
+                <div id="player"></div>
+            </div>
 
-                <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
-                <script type="text/javascript">
-                    currentChannel = new Twitch.Embed("twitch-embed", {
-                        width: '100%',
-                        height: 700,
-                        channel: channels[index],
-                        // Only needed if this page is going to be embedded on other websites
-                        parent: ["localhost", "hilarious-naiad-d54a76.netlify.app"]
-                    });
-                </script>
-
+            <div class="container">
+                <!-- TWITCH -->
                 <hr>
-                <!-- Main container -->
                 <nav class="level">
-                    <!-- Left side -->
                     <div class="level-left">
                         <div class="level-item">
-                            <button class="button is-link">
-                                <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=http://localhost:3000&scope=user:read:follows&response_type=token">Twitch</a>
-                            </button>
+                            <button class="button is-primary is-rounded"> <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=http://localhost:3000&scope=user:read:follows&response_type=token">Log In</a> </button>
+                        </div>
+                        <div class="level-item">
+                            <button class="button is-link" onClick="loadTwitchPlayer()">Twitch</button>
                         </div>
                         <div class="level-item">
                             <p id="channels-view"></p>
@@ -132,20 +65,21 @@
                         </div>
                     </div>
 
-                    <!-- Right side -->
                     <div class="level-right">
                         <p class="level-item"><button class="button is-info is-light" onClick="progDown()"><</button></p>
                         <p class="level-item"><button class="button is-info is-light" onClick="progUp()">></button></p>
-                        <p class="level-item"><button class="button is-dark is-light"><a style="color:red;" target="_blank" href="https://www.netflix.com/browse">Netflix</a></button></p>
-                        <p class="level-item"><button class="button is-dark"><a style="color: yellow;" target="_blank" href="https://app.plex.tv/desktop/#!/">Plex</a></button></p>
                     </div>
                 </nav>
 
+                <!-- YOUTUBE -->
                 <hr>
-                <div class="container level">
+                <div class="level">
                     <div class="level-right">
                         <div class="level-item">
-                            <button class="button is-danger">Youtube</button>
+                            <button class="button is-primary is-rounded"> <a style="color:white;" href="">Log In</a> </button>
+                        </div>
+                        <div class="level-item">
+                            <button class="button is-danger" onClick="onYouTubeIframeAPIReady()">Youtube</button>
                         </div>
 
                         <div class="level-item">
@@ -160,10 +94,131 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+
         </div>
-    </section>
+    </div>
+
+
+    <script type="text/javascript">
+        let url = window.location.href;
+        var client_id = '3tb8b7vw9i5wg4u89fb4q54n2ewgla';
+        var currentAccessToken = undefined;
+
+        var channels = ['yannick_sf'];
+        var index = 0;
+        var currentPlayer = undefined;
+        var currentPlayerMode = ''
+
+        loadTwitchPlayer();
+
+
+        if (url.includes('access_token')) {
+            let params = url.split('#');
+            let strAcctoken = params[1].split('&');
+            currentAccessToken = strAcctoken[0].split('=')[1];
+            apiGetUserInfos();
+        }
+
+        function apiGetUserInfos() {
+            if (currentAccessToken != undefined) {
+
+                axios.get("https://api.twitch.tv/helix/users", {
+                    headers: {
+                        'Authorization': 'Bearer ' + currentAccessToken,
+                        'Client-Id': client_id
+                    }
+                }).then((response) => {
+
+                    let userInfos = response.data.data[0]
+                    axios.get("https://api.twitch.tv/helix/streams/followed?user_id=" + userInfos.id, {
+                        headers: {
+                            'Authorization': 'Bearer ' + currentAccessToken,
+                            'Client-Id': client_id
+                        }
+                    }).then((resp) => {
+
+                        let streamList = resp.data.data
+                        for (var e in streamList) {
+                            channels.push(streamList[e].user_login);
+                            document.getElementById('channels-view').innerHTML += '<span class="tag is-medium">' + streamList[e].user_login + '</span> ';
+                        }
+                    })
+
+                });
+            }
+        }
+
+        function loadTwitchPlayer() {
+            refreshPlayer();
+            currentPlayerMode = 'tw';
+
+            currentPlayer = new Twitch.Embed("player", {
+                width: '100%',
+                height: 700,
+                channel: channels[index],
+                // Only needed if this page is going to be embedded on other websites
+                parent: ["localhost", "hilarious-naiad-d54a76.netlify.app"]
+            });
+        }
+
+        function progUp() {
+
+            if (index == channels.length - 1) {
+                index = 0;
+            } else {
+                index++;
+            }
+            currentPlayer.setChannel(channels[index]);
+
+        }
+
+        function progDown() {
+
+            if (index == 0) {
+                index = channels.length - 1;
+            } else {
+                index--;
+            }
+            currentPlayer.setChannel(channels[index]);
+        }
+
+        function addStreamerTochannels() {
+            let value = document.getElementById('search-streamer');
+            let view = document.getElementById('channels-view');
+
+            channels.push(value.value);
+            view.innerHTML += '<span class="tag is-medium">' + value.value + '</span> '
+            value.value = ''
+        }
+
+        function onYouTubeIframeAPIReady() {
+            currentPlayerMode = 'yt';
+
+            var tag = document.createElement('script');
+            tag.src = "https://www.youtube.com/iframe_api";
+
+            var firstScriptTag = document.getElementsByTagName('script')[0];
+            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+            currentPlayer = new YT.Player('player', {
+                width: '100%',
+                height: '700',
+                videoId: 'M7lc1UVf-VE'
+            });
+        }
+
+        function refreshPlayer() {
+            if (currentPlayerMode == 'yt') {
+                document.getElementById('player').remove();
+
+                let ppl = document.getElementById('place-player');
+                let newplayer = document.createElement('div');
+                newplayer.id = 'player';
+                ppl.append(newplayer);
+            }
+        }
+    </script>
 
 </body>
 
