--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <nav class="navbar">
                     <div class="navbar-brand">
-                        <p class="title">Mul[T•V]ers</p>
+                        <p class="title"><a href="http://localhost:3000/">Mul[T•V]ers</a></p>
                     </div>
 
                     <div class="navbar-menu">
@@ -45,7 +45,9 @@
                 <nav class="level">
                     <div class="level-left">
                         <div class="level-item">
-                            <button class="button is-primary is-rounded"> <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=http://localhost:3000&scope=user:read:follows&response_type=token">Log In</a> </button>
+                            <button class="button is-primary is-rounded"> 
+                                <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=http://localhost:3000&scope=user:read:follows&response_type=token">Log In</a> 
+                            </button>
                         </div>
                         <div class="level-item">
                             <button class="button is-link" onClick="loadTwitchPlayer()">Twitch</button>
@@ -76,16 +78,18 @@
                 <div class="level">
                     <div class="level-right">
                         <div class="level-item">
-                            <button class="button is-primary is-rounded"> <a style="color:white;" href="">Log In</a> </button>
+                            <button class="button is-primary is-rounded">
+                                <a style="color:white;" href="" <!--href="https://accounts.google.com/o/oauth2/v2/auth?client_id=414258510687-2sr6glgkobrm6brigtn241jv8prqndas.apps.googleusercontent.com&redirect_uri=http://localhost:3000&response_type=token&scope=https://www.googleapis.com/auth/youtube.readonly"--> </a>Log In</a>
+                            </button>
                         </div>
                         <div class="level-item">
-                            <button class="button is-danger" onClick="onYouTubeIframeAPIReady()">Youtube</button>
+                            <button class="button is-danger" onClick="">Youtube</button>
                         </div>
 
                         <div class="level-item">
                             <div class="field has-addons">
                                 <div class="control">
-                                    <input id="search-streamer" class="input is-rounded" type="text">
+                                    <input id="search-streamer" class="input is-rounded" placeholder="Coming soon ..." type="text">
                                 </div>
                                 <div class="control">
                                     <button class="button is-danger is-light is-rounded" onClick="">Search</button>
@@ -94,47 +98,121 @@
                         </div>
                     </div>
                 </div>
+
+                <div id="yt-sub" class="columns is-multiline">
+                </div>
+
             </div>
-
         </div>
-    </div>
 
+        <script type="text/javascript">
+            var channels = ['yannick_sf'];
+            var index = 0;
+            var currentPlayer = undefined;
+            var currentPlayerMode = undefined;
 
-    <script type="text/javascript">
-        let url = window.location.href;
-        var client_id = '3tb8b7vw9i5wg4u89fb4q54n2ewgla';
-        var currentAccessToken = undefined;
+            function progUp() {
 
-        var channels = ['yannick_sf'];
-        var index = 0;
-        var currentPlayer = undefined;
-        var currentPlayerMode = ''
+                if (index == channels.length - 1) {
+                    index = 0;
+                } else {
+                    index++;
+                }
+                currentPlayer.setChannel(channels[index]);
 
-        loadTwitchPlayer();
+            }
 
+            function progDown() {
 
-        if (url.includes('access_token')) {
-            let params = url.split('#');
-            let strAcctoken = params[1].split('&');
-            currentAccessToken = strAcctoken[0].split('=')[1];
-            apiGetUserInfos();
-        }
+                if (index == 0) {
+                    index = channels.length - 1;
+                } else {
+                    index--;
+                }
+                currentPlayer.setChannel(channels[index]);
+            }
 
-        function apiGetUserInfos() {
-            if (currentAccessToken != undefined) {
+            function refreshPlayer() {
+                if (currentPlayerMode == 'yt') {
+                    document.getElementById('player').remove();
 
+                    let ppl = document.getElementById('place-player');
+                    let newplayer = document.createElement('div');
+                    newplayer.id = 'player';
+                    ppl.append(newplayer);
+                }
+            }
+
+            function loadDefault() {
+                if (currentPlayerMode == 'tw') {
+                    loadTwitchPlayer();
+                } else if (currentPlayerMode == 'yt') {
+                    onYouTubeIframeAPIReady();
+                } else {
+                    currentPlayerMode == 'tw';
+                    loadTwitchPlayer();
+                }
+            }
+
+            // SETTINGS << 
+            let url = window.location.href;
+
+            var twClientId = '3tb8b7vw9i5wg4u89fb4q54n2ewgla';
+            var twAccessToken = undefined;
+
+            var ytClientId = '414258510687-2sr6glgkobrm6brigtn241jv8prqndas.apps.googleusercontent.com';
+            var ytApiKey = 'AIzaSyB9jIFZNvFR_Dyn5wuRokxGQo-x-Wypupg';
+            var ytAccessToken = undefined;
+
+            if (url.includes('access_token') && url.includes('youtube')) {
+                let params = url.split('#');
+                let strAcctoken = params[1].split('&');
+                ytAccessToken = strAcctoken[0].split('=')[1];
+                currentPlayerMode = 'yt';
+
+            } else if (url.includes('access_token')) {
+                let params = url.split('#');
+                let strAcctoken = params[1].split('&');
+                twAccessToken = strAcctoken[0].split('=')[1];
+                currentPlayerMode = 'tw';
+
+            }
+
+            loadDefault();
+
+            // TWITCH <<
+            function loadTwitchPlayer() {
+
+                if (currentPlayerMode == 'yt') {
+                    refreshPlayer();
+                }
+
+                currentPlayer = new Twitch.Embed("player", {
+                    width: '100%',
+                    height: 700,
+                    channel: channels[index],
+                    // Only needed if this page is going to be embedded on other websites
+                    parent: ["localhost", "hilarious-naiad-d54a76.netlify.app"]
+                });
+
+                if (twAccessToken != undefined) {
+                    twApiGetUserInfos();
+                }
+            }
+
+            function twApiGetUserInfos() {
                 axios.get("https://api.twitch.tv/helix/users", {
                     headers: {
-                        'Authorization': 'Bearer ' + currentAccessToken,
-                        'Client-Id': client_id
+                        'Authorization': 'Bearer ' + twAccessToken,
+                        'Client-Id': twClientId
                     }
                 }).then((response) => {
 
                     let userInfos = response.data.data[0]
                     axios.get("https://api.twitch.tv/helix/streams/followed?user_id=" + userInfos.id, {
                         headers: {
-                            'Authorization': 'Bearer ' + currentAccessToken,
-                            'Client-Id': client_id
+                            'Authorization': 'Bearer ' + twAccessToken,
+                            'Client-Id': twClientId
                         }
                     }).then((resp) => {
 
@@ -146,79 +224,60 @@
                     })
 
                 });
+
             }
-        }
 
-        function loadTwitchPlayer() {
-            refreshPlayer();
-            currentPlayerMode = 'tw';
+            function addStreamerTochannels() {
+                let value = document.getElementById('search-streamer');
+                let view = document.getElementById('channels-view');
 
-            currentPlayer = new Twitch.Embed("player", {
-                width: '100%',
-                height: 700,
-                channel: channels[index],
-                // Only needed if this page is going to be embedded on other websites
-                parent: ["localhost", "hilarious-naiad-d54a76.netlify.app"]
-            });
-        }
-
-        function progUp() {
-
-            if (index == channels.length - 1) {
-                index = 0;
-            } else {
-                index++;
+                channels.push(value.value);
+                view.innerHTML += '<span class="tag is-medium">' + value.value + '</span> '
+                value.value = ''
             }
-            currentPlayer.setChannel(channels[index]);
 
-        }
+            // YOUTUBE << 
+            function onYouTubeIframeAPIReady(chooseVideoId) {
 
-        function progDown() {
+                var tag = document.createElement('script');
+                tag.src = "https://www.youtube.com/iframe_api";
 
-            if (index == 0) {
-                index = channels.length - 1;
-            } else {
-                index--;
+                var firstScriptTag = document.getElementsByTagName('script')[0];
+                firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+                currentPlayer = new YT.Player('player', {
+                    width: '100%',
+                    height: '700',
+                    videoId: chooseVideoId
+                });
+
+                currentPlayerMode = 'yt';
             }
-            currentPlayer.setChannel(channels[index]);
-        }
 
-        function addStreamerTochannels() {
-            let value = document.getElementById('search-streamer');
-            let view = document.getElementById('channels-view');
+            function ytApiSub() {
+                axios.get("https://youtube.googleapis.com/youtube/v3/subscriptions?part=snippet&mine=true&key=" + ytApiKey, {
+                    headers: {
+                        'Authorization': 'Bearer ' + ytAccessToken
+                    }
+                }).then((response) => {
 
-            channels.push(value.value);
-            view.innerHTML += '<span class="tag is-medium">' + value.value + '</span> '
-            value.value = ''
-        }
+                    let subListChannelInfos = response.data.items
+                    axios.get("https://youtube.googleapis.com/youtube/v3/search?part=snippet&channelId=" + 'UCZ5TwKZZDHXokyRuAA9iG3w' + "&type=video&key=" + ytApiKey, {
+                        headers: {
+                            'Authorization': 'Bearer ' + ytAccessToken
+                        }
+                    }).then((resp) => {
+                        var subVideosInfos = resp.data.items;
 
-        function onYouTubeIframeAPIReady() {
-            currentPlayerMode = 'yt';
-
-            var tag = document.createElement('script');
-            tag.src = "https://www.youtube.com/iframe_api";
-
-            var firstScriptTag = document.getElementsByTagName('script')[0];
-            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-            currentPlayer = new YT.Player('player', {
-                width: '100%',
-                height: '700',
-                videoId: 'M7lc1UVf-VE'
-            });
-        }
-
-        function refreshPlayer() {
-            if (currentPlayerMode == 'yt') {
-                document.getElementById('player').remove();
-
-                let ppl = document.getElementById('place-player');
-                let newplayer = document.createElement('div');
-                newplayer.id = 'player';
-                ppl.append(newplayer);
+                        for (let i in subVideosInfos) {
+                            console.log(subVideosInfos[i].snippet['thumbnails']['default']['url']);
+                            let videoId = subVideosInfos[i].id["videoId"];
+                            document.getElementById('yt-sub').innerHTML += "<div class='column is-one-quarter'> <div class='card'> <header class='card-header'><button class='card-header-icon' onclick='onPlayerLoad('" + videoId + "')'>Voir</button> </header> <div class='card-image'><figure class='image is-4by3'> <img src='" + subVideosInfos[i].snippet['thumbnails']['default']['url'] + "' alt='Placeholder image'> </figure></div> <div class='card-content'> <div class='media'> <div class='media-content'> <p class='title is-4'>" + subVideosInfos[i].snippet['title'] + "</p> </div> </div> </div> </div> </div>";
+                        }
+                    })
+                })
             }
-        }
-    </script>
+        </script>
 
 </body>
 
