--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <nav class="navbar">
                     <div class="navbar-brand">
-                        <p class="title"><a href="http://localhost:3000/">Mul[T•V]ers</a></p>
+                        <p class="title"><a href="https://app.yannicksf.xyz">Mul[T•V]ers</a></p>
                     </div>
 
                     <div class="navbar-menu">
@@ -46,7 +46,7 @@
                     <div class="level-left">
                         <div class="level-item">
                             <button class="button is-primary is-rounded"> 
-                                <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=http://localhost:3000&scope=user:read:follows&response_type=token">Log In</a> 
+                                <a style="color:white;" href="https://id.twitch.tv/oauth2/authorize?client_id=3tb8b7vw9i5wg4u89fb4q54n2ewgla&redirect_uri=https://app.yannicksf.xyz&scope=user:read:follows&response_type=token">Log In</a> 
                             </button>
                         </div>
                         <div class="level-item">
