--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <hr>
                     <nav class="level">
                         <div class="level-left">
-                            <div class="level-item">
+                            <div v-if="!logedTW" class="level-item">
                                 <button class="button is-primary is-rounded"> 
                                     <a style="color:white;" :href="twLoginUrl">Log In</a> 
                                 </button>
@@ -56,7 +56,7 @@
                                 <button class="button is-link" @click="loadTwitchPlayer()">Twitch</button>
                             </div>
                             <div class="level-item">
-                                <span v-for="item in channels" class="tag is-medium" style="margin-left: 5px;">{{ item }}</span>
+                                <button @click="selectProg(index)" v-for="(item, index) in channels" class="tag is-medium" :class="item.isActive ? 'is-success' : '' " style="margin-left: 5px;">{{ item.name }}</button>
                             </div>
                         </div>
 
@@ -80,7 +80,7 @@
                     <hr>
                     <div class="level">
                         <div class="level-left">
-                            <div class="level-item">
+                            <div v-if="!logedYT" class="level-item">
                                 <button class="button is-primary is-rounded">
                                     <a style="color:white;" :href="ytLoginUrl">Log In</a>
                                 </button>
@@ -173,6 +173,8 @@
 
         createApp({
             mounted() {
+                // localStorage.setItem('twAccessToken', undefined);
+                localStorage.setItem('ytAccessToken', undefined);
 
                 if (url.includes('access_token') && url.includes('youtube')) {
                     let params = url.split('#');
@@ -186,21 +188,23 @@
 
                 }
 
-                if (localStorage.getItem('twAccessToken') != 'undefined') {
+                if (localStorage.getItem('twAccessToken') != null && localStorage.getItem('twAccessToken') != 'undefined') {
                     this.logedTW = true;
+                    this.loadTwitchPlayer();
                 }
 
-                if (localStorage.getItem('ytAccessToken') != 'undefined') {
+                if (localStorage.getItem('ytAccessToken') != null && localStorage.getItem('ytAccessToken') != 'undefined') {
                     this.logedYT = true;
+                    this.ytApiSub();
                 }
 
             },
             data() {
                 return {
-                    host: "https://app.yannicksf.xyz", // "http://localhost:3000"
+                    host: "http://localhost:3000", // "https://app.yannicksf.xyz"
                     currentPlayer: undefined,
                     playerMode: 'TW',
-                    index: 0,
+                    index: -1,
                     channels: [],
                     logedTW: false,
                     ytVideoId: '',
@@ -253,7 +257,10 @@
 
                             var streamList = resp.data.data
                             for (var e in streamList) {
-                                this.channels.push(streamList[e].user_login);
+                                this.channels.push({
+                                    'name': streamList[e].user_login,
+                                    'isActive': false
+                                });
                             }
                         })
 
@@ -265,23 +272,60 @@
                     value.value = ''
                 },
                 progUp() {
+                    let tmpChIndex = this.index;
 
                     if (this.index == this.channels.length - 1) {
                         this.index = 0;
                     } else {
                         this.index++;
                     }
-                    this.currentPlayer.setChannel(this.channels[this.index]);
+                    this.currentPlayer.setChannel(this.channels[this.index].name);
+
+                    if (this.index != -1) {
+                        this.channels[this.index].isActive = true;
+                    }
+
+                    if (tmpChIndex == this.channels.length - 1) {
+                        this.channels[tmpChIndex].isActive = false;
+                    } else {
+                        this.channels[this.index - 1].isActive = false;
+                    }
+
 
                 },
                 progDown() {
+
+                    let tmpChIndex = this.index;
 
                     if (this.index == 0) {
                         this.index = this.channels.length - 1;
                     } else {
                         this.index--;
                     }
-                    this.currentPlayer.setChannel(this.channels[this.index]);
+                    this.currentPlayer.setChannel(this.channels[this.index].name);
+
+                    if (this.index != -1) {
+                        this.channels[this.index].isActive = true;
+                    }
+
+                    if (tmpChIndex == 0) {
+                        this.channels[0].isActive = false;
+                    } else {
+                        this.channels[this.index + 1].isActive = false;
+                    }
+
+                },
+
+                selectProg(index) {
+                    if (index > -1) {
+                        this.currentPlayer.setChannel(this.channels[index].name);
+                        if (this.index != -1) {
+                            this.channels[this.index].isActive = false;
+                        }
+                        this.index = index;
+                        this.channels[index].isActive = true;
+
+                    }
                 },
 
                 ytApiSub() {
@@ -328,6 +372,9 @@
                 changeUrlVideo(value) {
                     this.playerMode = 'YT';
                     this.ytVideoId = value;
+                },
+                selectedChannel(id) {
+                    return this.index == id;
                 }
 
             },
@@ -340,7 +387,7 @@
                 },
                 ytUrlVideo() {
                     return 'https://www.youtube.com/embed/' + this.ytVideoId
-                },
+                }
             }
         }).mount('#app')
     </script>
