--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             },
             data() {
                 return {
-                    host: "http://localhost:3000", // "https://app.yannicksf.xyz"
+                    host: "https://app.yannicksf.xyz", // "http://localhost:3000"
                     currentPlayer: undefined,
                     playerMode: 'TW',
                     index: -1,
