--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 
 <head>
     <title>MulTVers</title>
+    <meta name="author" content="Yannick S. FELER">
+    <meta name="description" content="MulTVers. Got all VoD platform on one site.">
+    <meta name="twitter:title" content="MulTVers. Got all VoD platform on one site.">
+    <link rel="icon" type="image/png" href="favicon.ico">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
 
